# generative_deep_learning_2nd_edition_pytorch

./: .gitignore  .pre-commit-config.yaml  mypy.ini  pyproject.toml  ruff.toml  start_local_mlflow_server.sh
Chapter_02/CNN/: cnn_training.py
Chapter_02/CNN/config/: config.yaml
Chapter_02/MLP/: mlp_training.py
Chapter_02/MLP/config/: config.yaml
Chapter_03/AE/: ae_training.py
Chapter_03/AE/config/: config.yaml
Chapter_03/VAE/: vae_training_celeba.py  vae_training_fashion_mnist.py
Chapter_03/VAE/config/: config.yaml  config_celeba.yaml
stubs/torchvision/: __init__.pyi  _internally_replaced_utils.pyi  _meta_registrations.pyi  _utils.pyi  extension.pyi  utils.pyi  version.pyi
stubs/torchvision/datasets/: __init__.pyi  cifar.pyi  vision.pyi
stubs/torchvision/transforms/: __init__.pyi  transforms.pyi
tests/utils/nn/: test_utils.py
utils/data/: datasets.py
utils/metrics/: metrics.py
utils/nn/: initialization.py  modules.py  training.py  utils.py
